Initital start menu

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico|Russo+One&display=swap" rel="stylesheet">
     <title>Викторина</title>
 </head>
 <body>
-   
+    <div class="content">
+        <div class="startWindow">
+            <h3 class="headerMainTop">Интеллектуальная игра</h3>
+            <h1 class="headerMain">Викторина</h1>
+            <button class="buttonStartGame">Играть</button>
+        </div>
+        <div class="contentMenu">
+            <ul>
+                <li><button class="buttonMenu">1</button></li>
+                <li><button class="buttonMenu">1</button></li>
+                <li><button class="buttonMenu">1</button></li>
+                <li><button class="buttonMenu">1</button></li>
+                <li><button class="buttonMenu">1</button></li>
+            </ul>
+        </div>
+    </div>        
 <script src="script.js"></script>   
 </body>
 </html>
