Add global result and percent

--- a/src/index.html
+++ b/src/index.html
@@ -18,22 +18,22 @@
         <div class="contentMenu">
             <h3 class="headerTheme">Выбор темы</h3>
             <ul>
-                <li><button class="buttonMenu">Программирование</button></li>
-                <li><button class="buttonMenu">Математика</button></li>
-                <li><button class="buttonMenu">Русский язык</button></li>
-                <li><button class="buttonMenu">Биология</button></li>
-                <li><button class="buttonMenu">Информатика</button></li>
+                <li><button class="buttonMenu">Программирование <span></span></button></li>
+                <li><button class="buttonMenu">Математика <span></span></button></li>
+                <li><button class="buttonMenu">Русский язык <span></span></button></li>
+                <li><button class="buttonMenu">Биология <span></span></button></li>
+                <li><button class="buttonMenu">Информатика <span></span></button></li>
             </ul>
         </div>
         <div id="questionsPlace" class="questionsPlace">
             <div class="globalPoints" id="globalPoints">
-                <h3 class="result">100</h3>
+                <h3 class="result"><span>0</span> из 453</h3>
                 <h3>Баллов</h3>
             </div>
             <div class="resultPoints" id="resultPoints">
                 <h3 class="result">Результат</h3>
                 <p class="points"><span id="points"></span>%</p>
-                <h3 class="result">Баллов</h3>
+                <h3 class="correctResult">Правильные ответы</h3>
             </div>
             <div class="clock" id="divClock">
                 <span id="clock"></span>
